    * 0272 FIX: if checks: port type 56 (fibrechannel) is no longer inventorized per default...
    * 0577 FIX: fileinfo.groups: new date pattern is now available for inventory check as well
    * 0688 FIX: winperf_msx_queues: Support output of Exchange 2013...
    * 0578 FIX: zypper: check is always registered as soon as mk_zypper plugin detects zypper tool...
    * 0579 FIX: veeam_client: fix for case when no StopTime section in agent output
    * 0689 FIX: postgres_sessions: fix empty agent section in case of 0 sessions...

    Multisite:
    * 0371 Added log class filter to hostsvcevents view
    * 0352 Avoid Livestatus connections on pages that do not need them...
    * 0390 Added an icon selector to the view editor...
    * 0391 Added sorter / filter for host/service service levels...
    * 0247 New mkp package for web applications: iNag / nagstatus / nagios status.dat...
    * 0429 Implemented role permissions for dashboards...
    * 0430 It is now possible to define custom time ranges in PNP graph search...
    * 0449 Show all custom variables of hosts and services in the detail views...
    * 0665 Added mail notificaton method to custom user notification dialog...
    * 0123 New time range filter for Downtimes and Comments...
    * 0683 New column painter for the last time a service was OK...
    * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
    * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
    * 0307 FIX: Increased performance of multisite GUI with a large userbase...
    * 0312 FIX: Hiding views related to not existing datasources, like the EC now...
    * 0325 FIX: Removed CSV export icon from availability views...
    * 0327 FIX: Most forms did now work with "Profile Requests" enabled...
    * 0333 FIX: Fixed too long page title during performing several actions...
    * 0356 FIX: Fixed exception caused by utf8 chars in tooltip text...