@@ -1,0 +1,9 @@
+Title: WATO "Notify Users" feature: Improved confirmation info
+Level: 1
+Component: wato
+Version: 1.2.5i1
+Date: 1391534286
+Class: feature
+
+The confirmation dialog now shows more clearly which notify
+plugin succeeded and those which had problems.
