@@ -156,8 +156,8 @@
     * 0577 FIX: fileinfo.groups: new date pattern is now available for inventory check as well
     * 0688 FIX: winperf_msx_queues: Support output of Exchange 2013...
     * 0578 FIX: zypper: check is always registered as soon as mk_zypper plugin detects zypper tool...
-    * 0579 FIX: veeam_client: fix for case when no StopTime section in agent output
     * 0689 FIX: postgres_sessions: fix empty agent section in case of 0 sessions...
+    * 0579 FIX: veeam_client: fix for case when no StopTime section in agent output
 
     Multisite:
     * 0371 Added log class filter to hostsvcevents view
@@ -215,6 +215,7 @@
     * 0677 Make title of tags and tag groups localizable...
     * 0685 Distributed WATO now disabled WATO on slave sites per default...
     * 0687 New summary pages with all settings of a host or service...
+    * 0275 WATO "Notify Users" feature: Improved confirmation info...
     * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
     * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
     * 0019 FIX: Fixed wording in WATO rule for MSSQL check
